--- a/Codigo/_footer.html
+++ b/Codigo/_footer.html
@@ -1,36 +1,28 @@
-<footer class="page-footer red">
-    <div class="container">
-        <div class="row">
-            <div class="col l6 s12">
-                <h5>Contacto</h5>
-                <p> <i class="material-icons prefix">contact_phone</i> Roselin Vasquez: 4424675815</p>
-                <i class="material-icons prefix">email</i><a href="mailto:carinoanimal@hotmail.com"> carinoanimal@hotmail.com</a>
-                <p class="grey-text text-lighten-4"><i class="fas fa-map-marker-alt"></i> AV FERROCARRIL 63, LA CAÑADA, QUERETARO QUERETARO, 76800 SANTIAGO DE QUERÉTARO, QRO.</p>
-            </div>  
-            <div class="col l4 offset-l2 s12">
-                <h5 class="white-text">Redes Sociales</h5>
-                <ul>
-                    <li>
-                      <a href="https://www.facebook.com/CarinoAnimalQueretaro"><i class="fab fa-facebook-square fa-3x"></i></a>
-                      <a href="https://instagram.com/amorsinraza?igshid=yt0x0pfpg5fc"><i class="fab fa-instagram fa-3x"></i></a>
-                    </li>
-                </ul>
-            </div>
-        </div>    
-        <div class="footer-copyright red">
-            <div class="container">
-            2020 QARIÑO ANIMAL
-            </div>
-        </div>
-    </div>   
-</footer>
 
+<div class="uk-card-footer uk-background-muted uk-margin">
+	<div  class="uk-child-width-1-2@s uk-grid-match" uk-grid>
+    <!-- columna -->
+			<div>
+				<h5 class="uk-card-title">Contacto</h5>
+				<p> <span uk-icon="receiver"></span>  Roselin Vasquez: 4424675815</p>
+        <p><span uk-icon="mail"></span><a href="mailto:carinoanimal@hotmail.com" target="_blank"> carinoanimal@hotmail.com</a></p>
+        <p><span uk-icon="location"></span><a href="https://www.google.com/maps/place/Cari%C3%B1o+Animal/@20.614042,-100.325978,15z/data=!4m5!3m4!1s0x0:0x50ca41cc6a7e5d59!8m2!3d20.614042!4d-100.325978" target="_blank">Av Ferrocarril 63, La Cañada, Queretaro Queretaro, 76800 Santiago de Querétaro, Qro.</a></p>
+      </div>  
+        <!-- columna -->
+      <div class="uk-divider-vertical">
+            <h5 class="uk-card-title">Redes Sociales</h5>
+            <p>
+                  <a href="https://www.facebook.com/CarinoAnimalQueretaro"><span uk-icon="icon: facebook; ratio: 2"></span></a>
+                  <a href="https://instagram.com/amorsinraza?igshid=yt0x0pfpg5fc"><span uk-icon="icon: instagram; ratio: 2"></span></a>
+             </p> 
+      </div>   
+
+      <div>©2020 QARIÑO ANIMAL<div>
+
+  </div>   
+</div>
 <!-- Compiled and minified JavaScript -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-<script>
-    $(document).ready(function(){
-      $(".dropdown-trigger").dropdown();
-      $('.sidenav').sidenav();
-    });
-</script>
+
+</body>
+</html>
