--- a/Codigo/_header.html
+++ b/Codigo/_header.html
@@ -1,16 +1,15 @@
-    <header>
+<!DOCTYPE html>
+<html>
+    <head>
         <title>Qariño Animal</title>
         <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="css/uikit.min.css" />
+        <script src="js/uikit.min.js"></script>
+        <script src="js/uikit-icons.min.js"></script>
+
         <link rel = "stylesheet" href = "style.css" >
-        <!-- Materialize style sheet -->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
+        
         <script src="https://kit.fontawesome.com/aa768a5eb1.js" crossorigin="anonymous"></script>
-
-        <!-- Add icon library
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">-->
-
-    </header>
-    
+    </head> 
+<body>
