--- a/Codigo/_tarjetaPerro.html
+++ b/Codigo/_tarjetaPerro.html
@@ -1,13 +1,14 @@
+<div>
+<div class="uk-card uk-card-default">
+    <div class="uk-card-media-top uk-height-medium dog-card-image" style=<?="background-image:url('".$img."');"?>></div>
+    <div class="uk-card-body">
+        <h3 class="uk-card-title">
+          <span class="card-title"><?= $name." - ".$age ?></span>
+        </h3>
+        
+        <a href="#" class="uk-button uk-button-text uk-align-left">Leer más</a>
 
-<div class="col s12 m4">
-  <div class="card">
-    <div class="card-image">
-      <img alt = "Perro negro sonriente llamado Mario"class="materialboxed" src=<?= $img ?>>
-      <a class="btn-floating halfway-fab waves-effect waves-light red">
-        <i class="material-icons">remove_red_eye</i></a>
     </div>
-    <div class="card-content">
-      <span class="card-title"><?= $name." - ".$age ?></span>
-    </div>
-  </div>
 </div>
+</div>
+
