--- a/Codigo/_header.html
+++ b/Codigo/_header.html
@@ -9,7 +9,13 @@
         <script src="js/uikit-icons.min.js"></script>
 
         <link rel = "stylesheet" href = "style.css" >
-        
+
         <script src="https://kit.fontawesome.com/aa768a5eb1.js" crossorigin="anonymous"></script>
-    </head> 
+    </head>
 <body>
+<?php session_start();?>
+
+<!--<button class="uk-button uk-button-default demo" type="button" onclick="UIkit.notification({message: 'Primary message...', status: 'primary'})">Primary</button>-->
+<!--<button class="uk-button uk-button-default demo" type="button" onclick="UIkit.notification({message: 'Success message...', status: 'success'})">Success</button>-->
+<!--<button class="uk-button uk-button-default demo" type="button" onclick="UIkit.notification({message: 'Warning message...', status: 'warning'})">Warning</button>-->
+<!--<button class="uk-button uk-button-default demo" type="button" onclick="UIkit.notification({message: 'Danger message...', status: 'danger'})">Danger</button>-->
