--- a/Codigo/_footer.html
+++ b/Codigo/_footer.html
@@ -30,5 +30,12 @@
         }
     </script>
 <?php $_SESSION["error"]=NULL; endif; ?>
+<?php if(isset($_SESSION["mensaje"]) && $_SESSION["mensaje"]!=""): ?>
+    <script>
+        window.onload = function() {
+            UIkit.notification({message: '<?= $_SESSION["mensaje"] ?>', status: "primary"})
+        }
+    </script>
+<?php $_SESSION["mensaje"]=NULL; endif; ?>
 </body>
 </html>
