Agregar interfaz editar perro modal

--- a/Codigo/_tarjetaPerro.html
+++ b/Codigo/_tarjetaPerro.html
@@ -1,14 +1,13 @@
 <div>
-<div class="uk-card uk-card-default">
-    <div class="uk-card-media-top uk-height-medium dog-card-image" style=<?="background-image:url('".$img."');"?>></div>
-    <div class="uk-card-body">
-        <h3 class="uk-card-title">
-          <span class="card-title"><?= $name." - ".$age ?></span>
-        </h3>
-        
-        <a href="#" class="uk-button uk-button-text uk-align-left">Leer más</a>
+    <div class="uk-card uk-card-default">
+        <div class="uk-card-media-top uk-height-medium dog-card-image" style=<?="background-image:url('".$img."');"?>></div>
+        <div class="uk-card-body">
+            <h3 class="uk-card-title">
+              <span class="card-title"><?= $name." - ".$age ?></span>
+            </h3>
 
+            <a href="#modal-editar" class="uk-button uk-button-text uk-align-left" uk-toggle>Leer más</a>
+
+        </div>
     </div>
 </div>
-</div>
-
