Accesar id de base de datos con boton

--- a/Codigo/_tarjetaPerro.html
+++ b/Codigo/_tarjetaPerro.html
@@ -6,8 +6,8 @@
               <span class="card-title"><?= $name." - ".$age ?></span>
             </h3>
 
-            <a href="#" class="uk-button uk-button-text uk-align-left" uk-toggle>Leer más</a>
-            <a href="#" class="boton-editar uk-button uk-button-text uk-align-left" idPerro=<?=$id ?> uk-toggle>Editar</a>
+            <a class="uk-button uk-button-text uk-align-left">Leer más</a>
+            <a class="boton-editar uk-button uk-button-text uk-align-left" idPerro=<?=$id ?>>Editar</a>
 
         </div>
     </div>
