--- a/Codigo/_header.html
+++ b/Codigo/_header.html
@@ -8,7 +8,7 @@
         <script src="js/uikit.min.js"></script>
         <script src="js/uikit-icons.min.js"></script>
 
-        <link rel = "stylesheet" href = "style.css" >
+        <link rel = "stylesheet" href = "css/style.css" >
         <link href="css/nouislider.min.css" rel="stylesheet">
 
         <script src="https://kit.fontawesome.com/aa768a5eb1.js" crossorigin="anonymous"></script>
