--- a/Codigo/_navbar.html
+++ b/Codigo/_navbar.html
@@ -10,7 +10,7 @@
                 <li><a href="quienesSomos.php">¿Quiénes somos? <i class="fas fa-people-carry uk-margin-small-left"></i></a></li>
                 <li><a href="contactanos.php">Contáctanos <i class="fas fa-comments uk-margin-small-left"></i></a></li>
                 <li><a href="#">Blog <i class="fas fa-rss uk-margin-small-left"></i></a></li>
-                <li><a href="preguntasFrecuentes.php">Pregutnas Frecuentes <i class="fas fa-question uk-margin-small-left"></i></a></li>
+                <li><a href="preguntasFrecuentes.php">Preguntas Frecuentes <i class="fas fa-question uk-margin-small-left"></i></a></li>
                 <li>
                   <a href="#!" ><i class="fas fa-user-circle uk-margin-small-right" ></i><?= isset($_SESSION["nombre"])?$_SESSION["nombre"]:"Mi Cuenta" ?></a>
                   <div class="uk-navbar-dropdown uk-width-auto uk-height-auto">
@@ -24,6 +24,3 @@
         </ul>
     </div>
 </nav>
-
-
-
