Corrige tamanio de imagen en navbar

--- a/src/_navbar.html
+++ b/src/_navbar.html
@@ -1,7 +1,6 @@
-<nav class="uk-navbar-container" uk-navbar>
+<nav class="uk-navbar-container uk-height-max-small" uk-navbar>
     <div class="uk-navbar-left">
-       <a class="uk-navbar-item uk-logo" href="index.php"><img src="img/QA.jpg" class="uk-height-small uk-border-rounded"></a>
-
+       <a  class="uk-navbar-item uk-logo" href="index.php"><img id="navLogo" src="img/QA.jpg" class="uk-border-rounded"></a>
     </div>
     <div class="uk-navbar-right">
         <ul class="uk-navbar-nav">
