agregar funcionalidad eliminar perro

--- a/src/_footer.html
+++ b/src/_footer.html
@@ -23,19 +23,16 @@
 </div>
 <!-- Compiled and minified JavaScript -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script src="js/ajax.js"></script>
 <?php if(isset($_SESSION["error"]) && $_SESSION["error"]!=""): ?>
     <script>
-        window.onload = function() {
-            UIkit.notification({message: '<?= $_SESSION["error"] ?>', status: "danger"})
-        }
+        window.onload = mostarMensaje('<?= $_SESSION["error"] ?>',"danger");
     </script>
-<?php $_SESSION["error"]=NULL; endif; ?>
+<?php unset($_SESSION["error"]); endif; ?>
 <?php if(isset($_SESSION["mensaje"]) && $_SESSION["mensaje"]!=""): ?>
     <script>
-        window.onload = function() {
-            UIkit.notification({message: '<?= $_SESSION["mensaje"] ?>', status: "primary"})
-        }
+        window.onload = mostarMensaje('<?= $_SESSION["mensaje"] ?>',"primary");
     </script>
-<?php $_SESSION["mensaje"]=NULL; endif; ?>
+<?php unset($_SESSION["mensaje"]); endif; ?>
 </body>
 </html>
