Muestra interaz correspondiete a usuarios no registrados y administradores

--- a/src/_header.html
+++ b/src/_header.html
@@ -14,4 +14,7 @@
         <script src="https://kit.fontawesome.com/aa768a5eb1.js" crossorigin="anonymous"></script>
     </head>
 <body>
-<?php session_start();?>
+<?php
+    session_start();
+    print_r($_SESSION["privilegios"]);
+?>
