Agrega permiso a editar perro y simplifica la verificacón de privilegios con la funcion checkPriv(privilegio)

--- a/src/_tarjetaPerro.html
+++ b/src/_tarjetaPerro.html
@@ -7,7 +7,11 @@
             </h3>
 
             <a class="uk-button uk-button-text uk-align-left">Leer más</a>
-            <a class="boton-editar uk-button uk-button-text uk-align-left" idPerro=<?=$id ?>>Editar</a>
+            <?php
+            if(checkPriv("registrar")){
+                echo "<a class='boton-editar uk-button uk-button-text uk-align-left' idPerro=" . $id . ">Editar</a>";
+            }
+            ?>
 
         </div>
     </div>
