--- a/src/_tarjetaPerro.html
+++ b/src/_tarjetaPerro.html
@@ -1,6 +1,6 @@
 <div>
     <div class="uk-card uk-card-default">
-        <div class="uk-card-media-top uk-height-medium dog-card-image" style=<?="background-image:url('".$img."');"?>></div>
+        <div class="uk-card-media-top uk-height-medium dog-card-image" style= <?="background-image:url('".$img."');" ?>> </div>
         <div class="uk-card-body">
             <h3 class="uk-card-title">
               <span class="card-title"><?= $name." - ".$age ?></span>
@@ -8,7 +8,7 @@
 
             <a class="uk-button uk-button-text uk-align-left">Leer más</a>
             <?php
-            if(checkPriv("registrar")){
+            if(checkPriv("editar-perro")){
                 echo "<a class='boton-editar uk-button uk-button-text uk-align-left' idPerro=" . $id . ">Editar</a>";
             }
             ?>
