--- a/src/_footer.html
+++ b/src/_footer.html
@@ -1,35 +1,26 @@
-<div class="uk-background-muted" id="footer">
-	<div class="uk-flex uk-flex-between uk-container">
-		<div class="uk-container uk-flex-left uk-align-center uk-margin-top">
-			<h1>Contacto</h1>
-			<p><span uk-icon="receiver"></span> Roselin Vasquez: 4424675815</p>
-			<p><span uk-icon="mail"></span><a href="mailto:carinoanimal@hotmail.com" target="_blank"> carinoanimal@hotmail.com</a></p>
-			<p><span uk-icon="location"></span><a href="https://www.google.com/maps/place/Cari%C3%B1o+Animal/@20.614042,-100.325978,15z/data=!4m5!3m4!1s0x0:0x50ca41cc6a7e5d59!8m2!3d20.614042!4d-100.325978" target="_blank">Av Ferrocarril 63, La Cañada, Queretaro Queretaro, 76800 Santiago de Querétaro, Qro.</a></p>
-		</div>
-		<hr class="uk-divider-vertical uk-height-small">
 
+<div class="uk-card-footer uk-background-muted uk-margin">
+	<div  class="uk-child-width-1-2@s uk-grid-match" uk-grid>
+    <!-- columna -->
+			<div>
+				<h5 class="uk-card-title">Contacto</h5>
+				<p> <span uk-icon="receiver"></span>  Roselin Vasquez: 4424675815</p>
+        <p><span uk-icon="mail"></span><a href="mailto:carinoanimal@hotmail.com" target="_blank"> carinoanimal@hotmail.com</a></p>
+        <p><span uk-icon="location"></span><a href="https://www.google.com/maps/place/Cari%C3%B1o+Animal/@20.614042,-100.325978,15z/data=!4m5!3m4!1s0x0:0x50ca41cc6a7e5d59!8m2!3d20.614042!4d-100.325978" target="_blank">Av Ferrocarril 63, La Cañada, Queretaro Queretaro, 76800 Santiago de Querétaro, Qro.</a></p>
+      </div>  
+        <!-- columna -->
+      <div class="uk-divider-vertical">
+            <h5 class="uk-card-title">Redes Sociales</h5>
+            <p>
+                  <a href="https://www.facebook.com/CarinoAnimalQueretaro"><span uk-icon="icon: facebook; ratio: 2"></span></a>
+                  <a href="https://instagram.com/amorsinraza?igshid=yt0x0pfpg5fc"><span uk-icon="icon: instagram; ratio: 2"></span></a>
+             </p> 
+      </div>   
 
-		<div class="uk-container uk-flex-right uk-margin-top">
-			<h1>Redes Sociales</h1>
-			<a href="https://www.facebook.com/CarinoAnimalQueretaro"><span uk-icon="icon: facebook; ratio: 2"></span></a>
-			<a href="https://instagram.com/amorsinraza?igshid=yt0x0pfpg5fc"><span uk-icon="icon: instagram; ratio: 2"></span></a>
-		</div>
-		<br>
-	</div>
-	<hr>
-	<div class="uk-container">
-		<div class="uk-align-center">
-			<p class="uk-text-center">2020 © Qariño Animal</p>
-		</div>
-	</div>
+      <div>©2020 QARIÑO ANIMAL<div>
+
+  </div>   
 </div>
-
-
-
-
-
-
-
 <!-- Compiled and minified JavaScript -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="js/ajax.js"></script>
