--- a/src/_footer.html
+++ b/src/_footer.html
@@ -26,6 +26,8 @@
 <!-- Compiled and minified JavaScript -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="js/ajax.js"></script>
+<script src="js/validaciones.js"></script>
+
 <?php if(isset($_SESSION["error"]) && $_SESSION["error"]!=""): ?>
     <script>
         window.onload = mostarMensaje('<?= $_SESSION["error"] ?>',"danger");
