--- a/src/_navbar.html
+++ b/src/_navbar.html
@@ -1,4 +1,4 @@
-<nav class="uk-navbar-container uk-height-max-small" uk-navbar>
+<nav class="uk-navbar-container uk-height-max-small" uk-navbar uk-sticky>
     <div class="uk-navbar-left">
        <a  class="uk-navbar-item uk-logo" href="index.php"><img id="navLogo" src="img/QA.jpg" class="uk-border-rounded"></a>
     </div>
