--- a/src/_footer.html
+++ b/src/_footer.html
@@ -11,7 +11,7 @@
 		<div class="uk-container uk-flex-right uk-margin-top">
 			<h1>Redes Sociales</h1>
 			<a href="https://www.facebook.com/CarinoAnimalQueretaro"><span uk-icon="icon: facebook; ratio: 2"></span></a>
-			<a href="https://instagram.com/amorsinraza?igshid=yt0x0pfpg5fc"><span uk-icon="icon: instagram; ratio: 2"></span></a>
+			<a href="https://instagram.com/qarinoanimal?igshid=6u1f1ufsppz1"><span uk-icon="icon: instagram; ratio: 2"></span></a>
 		</div>
 		<br>
 	</div>
