Agregar animacion a tarjetas de perro

--- a/src/_footer.html
+++ b/src/_footer.html
@@ -18,7 +18,7 @@
 	<hr>
 	<div class="uk-container">
 		<div class="uk-align-center">
-			<p class="uk-text-center">2020 © Qariño Animal</p>
+			<p class="uk-text-center uk-text-meta">2020 © Qariño Animal</p>
 		</div>
 	</div>
 </div>
