--- a/src/_header.html
+++ b/src/_header.html
@@ -10,7 +10,7 @@
 
         <link rel = "stylesheet" href = "css/style.css" >
         <link href="css/nouislider.min.css" rel="stylesheet">
-
+        <link rel='icon' href='img/logo.ico' type='image/x-icon'/ >
         <script src="https://kit.fontawesome.com/aa768a5eb1.js" crossorigin="anonymous"></script>
     </head>
 <body>
