--- a/src/_tarjetaPerro.html
+++ b/src/_tarjetaPerro.html
@@ -1,6 +1,6 @@
 <div class="uk-card uk-width-large" uk-scrollspy="cls:uk-animation-fade; repeat: true">
-    <div class="uk-card uk-card-hover uk-box-shadow-medium">
-        <div class=" uk-card-media-top uk-height-medium dog-card-image" style= <?="background-image:url('".$img."');" ?>> </div>
+    <div class="uk-card uk-card-hover uk-box-shadow-medium uk-border-rounded">
+        <div class=" uk-card-media-top uk-height-medium dog-card-image uk-border-rounded" style= <?="background-image:url('".$img."');" ?>> </div>
         <div class="uk-card uk-card-body">
             <h3 class="uk-card-title"><?= $name ?></h3>
             <p><?= $age ?><p>
