--- a/src/_navbar.html
+++ b/src/_navbar.html
@@ -1,6 +1,6 @@
-<nav class="uk-navbar-container uk-height-max-small" uk-navbar uk-sticky>
+<nav class="uk-navbar-container uk-height-max-small uk-box-shadow-small" uk-navbar uk-sticky>
     <div class="uk-navbar-left">
-       <a  class="uk-navbar-item uk-logo" href="index.php"><img id="navLogo" src="img/logo.png" class="uk-border-rounded"></a>
+       <a  class="uk-navbar-item uk-logo uk-margin-small uk-margin-small-top" href="index.php"><img id="navLogo" src="img/logo.png" class="uk-border-rounded"></a>
     </div>
     <div class="uk-navbar-right">
         <ul class="uk-navbar-nav">
