--- a/src/_navbar.html
+++ b/src/_navbar.html
@@ -14,16 +14,15 @@
                   <div class="uk-navbar-dropdown uk-width-auto uk-height-auto">
                     <ul class="uk-nav uk-navbar-dropdown-nav">
                         <?php if(isset($_SESSION["nombre"])): ?>
-                        <li class="uk-text-center"><a href="miCuenta.php">Ajustes de cuenta</a></li>
-                        <li class="uk-text-center"><a href="cerrarSesion.php" uk-toggle">Cerrar Sesion</a></li>
+                        <li class="uk-text-center uk-text-nowrap"><a href="miCuenta.php">Ajustes de cuenta</a></li>
+                        <li class="uk-text-center uk-text-nowrap"><a href="cerrarSesion.php" uk-toggle">Cerrar Sesion</a></li>
                         <?php else: ?>
-                        <li class="uk-text-center"><a href="iniciarSesion.php">Iniciar Sesion</a></li>
-                        <li class="uk-text-center"><a href="crearCuenta.php" uk-toggle">Crear Cuenta</a></li>
+                        <li class="uk-text-center uk-text-nowrap"><a href="iniciarSesion.php">Iniciar Sesion</a></li>
+                        <li class="uk-text-center uk-text-nowrap"><a href="crearCuenta.php" uk-toggle">Crear Cuenta</a></li>
                         <?php endif; ?>
                     </ul>
                   </div>
                 </li>
-            <li><a href=""></a></li>
         </ul>
     </div>
 </nav>
