--- a/src/_navbar.html
+++ b/src/_navbar.html
@@ -15,10 +15,10 @@
                     <ul class="uk-nav uk-navbar-dropdown-nav">
                         <?php if(isset($_SESSION["nombre"])): ?>
                         <li class="uk-text-center uk-text-nowrap"><a href="miCuenta.php">Ajustes de cuenta</a></li>
-                        <li class="uk-text-center uk-text-nowrap"><a href="cerrarSesion.php" uk-toggle">Cerrar Sesion</a></li>
+                        <li class="uk-text-center uk-text-nowrap"><a href="cerrarSesion.php" uk-toggle">Cerrar sesión</a></li>
                         <?php else: ?>
-                        <li class="uk-text-center uk-text-nowrap"><a href="iniciarSesion.php">Iniciar Sesion</a></li>
-                        <li class="uk-text-center uk-text-nowrap"><a href="crearCuenta.php" uk-toggle">Crear Cuenta</a></li>
+                        <li class="uk-text-center uk-text-nowrap"><a href="iniciarSesion.php">Iniciar sesión</a></li>
+                        <li class="uk-text-center uk-text-nowrap"><a href="crearCuenta.php" uk-toggle">Crear cuenta</a></li>
                         <?php endif; ?>
                     </ul>
                   </div>
