--- a/src/_navbar.html
+++ b/src/_navbar.html
@@ -11,22 +11,23 @@
                 <li><a href="contactanos.php">Contáctanos <i class="fas fa-comments uk-margin-small-left"></i></a></li>
                 <li>
                   <a href="#!" ><i class="fas fa-user-circle uk-margin-small-right" ></i><?= isset($_SESSION["nombre"])?$_SESSION["nombre"]:"Mi Cuenta" ?></a>
-                  <div class="uk-navbar-dropdown uk-width-auto uk-height-auto">
+                  <div class="uk-navbar-dropdown uk-width-auto uk-text-left">
                     <ul class="uk-nav uk-navbar-dropdown-nav">
                         <?php if(isset($_SESSION["nombre"])): ?>
                             <?php if(checkPriv("adoptar")): ?>
-                                <li class="uk-text-center uk-text-nowrap"><a href="misSolicitudes.php">Mis solicitudes de adopción</a></li>
+                                <li class="uk-text-nowrap"><a href="misSolicitudes.php">Mis solicitudes de adopción</a></li>
 
                             <?php endif; ?>
                             <?php if(checkPriv("ver-todas-solicitudes")): ?>
-                                <li class="uk-text-center uk-text-nowrap"><a href="gestionarSolicitudes.php">Ver todas las solicitudes</a></li>
+                                <li class="uk-text-nowrap"><a href="gestionarSolicitudes.php">Ver todas las solicitudes</a></li>
 
                             <?php endif; ?>
-                            <li class="uk-text-center uk-text-nowrap"><a href="miCuenta.php">Ajustes de cuenta</a></li>
-                            <li class="uk-text-center uk-text-nowrap"><a href="cerrarSesion.php">Cerrar sesión</a></li>
+                            <hr>
+                            <li class="uk-text-nowrap"><a href="miCuenta.php"><span uk-icon="icon: settings"></span> Ajustes de cuenta</a></li>
+                            <li class="uk-text-nowrap"><a href="cerrarSesion.php"><span uk-icon="icon: sign-out"></span> Cerrar sesión</a></li>
                         <?php else: ?>
-                            <li class="uk-text-center uk-text-nowrap"><a href="iniciarSesion.php">Iniciar sesión</a></li>
-                            <li class="uk-text-center uk-text-nowrap"><a href="crearCuenta.php">Crear cuenta</a></li>
+                            <li class="uk-text-nowrap"><a href="iniciarSesion.php"><span uk-icon="icon: sign-in"></span> Iniciar sesión</a></li>
+                            <li class="uk-text-nowrap"><a href="crearCuenta.php"><span uk-icon="icon: user"></span> Crear cuenta</a></li>
                         <?php endif; ?>
                     </ul>
                   </div>
