--- a/src/_navbar.html
+++ b/src/_navbar.html
@@ -7,7 +7,7 @@
                 <li><a href="catalogo.php">Nuestros Perros <i class="fas fa-dog uk-margin-small-left"></i></a></li>
                 <li><a href="comoAyudar.php">¿Cómo ayudar? <i class="fas fa-hands-helping uk-margin-small-left"></i></a></li>
                 <li><a href="quienesSomos.php">¿Quiénes somos? <i class="fas fa-people-carry uk-margin-small-left"></i></a></li>
-                <li><a href="preguntasFrecuentes.php">Preguntas Frecuentes <i class="fas fa-question uk-margin-small-left"></i></a></li>
+                <li><a href="preguntasFrecuentes.php" id="preguntasFrecuentes">Preguntas Frecuentes <i class="fas fa-question uk-margin-small-left"></i></a></li>
                 <li><a href="contactanos.php">Contáctanos <i class="fas fa-comments uk-margin-small-left"></i></a></li>
                 <li>
                   <a href="#!" ><i class="fas fa-user-circle uk-margin-small-right" ></i><?= isset($_SESSION["nombre"])?$_SESSION["nombre"]:"Mi Cuenta" ?></a>
