Agrega funcionalidad a cambiar contraseña

--- a/src/_footer.html
+++ b/src/_footer.html
@@ -1,3 +1,5 @@
+
+</div> <!-- Cierra el tag de contenido, abierto en _navbar -->
 <div class="uk-background-muted" id="footer">
 	<div class="uk-flex uk-flex-between uk-container">
 		<div class="uk-container uk-flex-left uk-align-center uk-margin-top">
