--- a/src/_navbar.html
+++ b/src/_navbar.html
@@ -35,3 +35,5 @@
         </ul>
     </div>
 </nav>
+    <div uk-spinner="ratio: 3" class="uk-position-fixed uk-transform-center" style="left: 50%; top: 50%" hidden></div>
+<div id="content">
