--- a/src/_navbar.html
+++ b/src/_navbar.html
@@ -20,7 +20,7 @@
                             <?php if(checkPriv("ver-todas-solicitudes")): ?>
                                 <li class="uk-text-nowrap"><a href="gestionarSolicitudes.php"><span uk-icon="icon: table"></span> Ver todas las solicitudes</a></li>
                                 <hr>
-                                <li class="uk-text-nowrap"><a href="gestionarSolicitudes.php"><span uk-icon="icon: settings"></span> Panel de control de la página</a></li>
+                                <li class="uk-text-nowrap"><a href="panelControl.php"><span uk-icon="icon: settings"></span> Panel de control de la página</a></li>
                             <?php endif; ?>
                             <hr>
                             <li class="uk-text-nowrap"><a href="miCuenta.php"><span uk-icon="icon: cog"></span> Ajustes de cuenta</a></li>
