Arregla errores en contacto

--- a/src/_navbar.html
+++ b/src/_navbar.html
@@ -10,7 +10,7 @@
                 <li><a href="preguntasFrecuentes" id="preguntasFrecuentes">Preguntas Frecuentes <i class="fas fa-question uk-margin-small-left"></i></a></li>
                 <li><a href="contactanos">Contáctanos <i class="fas fa-comments uk-margin-small-left"></i></a></li>
                 <li>
-                  <a href="#!" ><i class="fas fa-user-circle uk-margin-small-right" ></i><?= isset($_SESSION["nombre"])?$_SESSION["nombre"]:"Mi Cuenta" ?></a>
+                  <a href="" ><i class="fas fa-user-circle uk-margin-small-right" ></i><?= isset($_SESSION["nombre"])?$_SESSION["nombre"]:"Mi Cuenta" ?></a>
                   <div class="uk-navbar-dropdown uk-width-auto uk-text-left">
                     <ul class="uk-nav uk-navbar-dropdown-nav uk-margin-right">
                         <?php if(isset($_SESSION["nombre"])): ?>
