Finaliza filtros, agrega fecha default a agregar perro y permite ver perros en otros estados a admin

--- a/src/_header.html
+++ b/src/_header.html
@@ -17,4 +17,7 @@
 <?php
     session_start();
     include_once("util.php");
+    if(isset($_SESSION["email"])){
+        setPermisos($_SESSION["email"]);
+    }
 ?>
