--- a/src/_header.html
+++ b/src/_header.html
@@ -11,6 +11,7 @@
         <link rel = "stylesheet" href = "css/style.css" >
         <link href="css/nouislider.min.css" rel="stylesheet">
         <link rel='icon' href='img/logo.ico' type='image/x-icon'/ >
+        <link href="css/hamburgers.css" rel="stylesheet">
         <script src="https://kit.fontawesome.com/aa768a5eb1.js" crossorigin="anonymous"></script>
     </head>
 <body>
