--- a/src/_footer.html
+++ b/src/_footer.html
@@ -16,7 +16,7 @@
 	<hr>
 	<div class="uk-container">
 		<div class="uk-align-center">
-			<p class="uk-text-center uk-text-meta">2020 © Qariño Animal</p>
+			<p class="uk-text-center uk-text-meta"><?= date('Y') ?> © Qariño Animal</p>
 		</div>
 	</div>
 </div>
