Arregla hamburger para evitar coloracion de boton

--- a/src/_navbar.html
+++ b/src/_navbar.html
@@ -56,11 +56,11 @@
        </a>
     </div>
     <div class="uk-navbar-right uk-margin-right">
-        <button class="hamburger hamburger--squeeze" type="button" onclick="toggleOffCanvas()" id="hamburger-btn">
+        <div class="hamburger hamburger--squeeze" type="button" onclick="toggleOffCanvas()" id="hamburger-btn">
             <span class="hamburger-box">
                 <span class="hamburger-inner"></span>
             </span>
-        </button>
+        </div>
     </div>
 
 </nav>
