--- a/src/_navbar.html
+++ b/src/_navbar.html
@@ -24,7 +24,7 @@
                                     <li class="uk-text-nowrap"><a href="gestionarSolicitudes"><span uk-icon="icon: table"></span> Ver todas las solicitudes</a></li>
                                     <hr>
                                     <li class="uk-text-nowrap"><a href="panelControl"><span uk-icon="icon: settings"></span> Panel de control de la página</a></li>
-                                    <li class="uk-text-nowrap"><a href="agregarOperadores"><span uk-icon="icon: users"></span> Agregar operadores</a></li>
+                                    <li class="uk-text-nowrap"><a href="gestionarOperadores"><span uk-icon="icon: users"></span> Gestionar operadores</a></li>
                                 <?php endif; ?>
                                 <hr>
                                 <li class="uk-text-nowrap"><a href="miCuenta"><span uk-icon="icon: cog"></span> Ajustes de cuenta</a></li>
@@ -86,7 +86,7 @@
                                     <li class="uk-text-nowrap"><a href="gestionarSolicitudes"><span uk-icon="icon: table"></span> Ver todas las solicitudes</a></li>
                                     <hr>
                                     <li class="uk-text-nowrap"><a href="panelControl"><span uk-icon="icon: settings"></span> Panel de control de la página</a></li>
-                                    <li class="uk-text-nowrap"><a href="agregarOperadores"><span uk-icon="icon: users"></span> Agregar operadores</a></li>
+                                    <li class="uk-text-nowrap"><a href="gestionarOperadores"><span uk-icon="icon: users"></span> Gestionar operadores</a></li>
                                 <?php endif; ?>
                                 <hr>
                                 <li class="uk-text-nowrap"><a href="miCuenta"><span uk-icon="icon: cog"></span> Ajustes de cuenta</a></li>
