--- a/src/_footer.html
+++ b/src/_footer.html
@@ -24,7 +24,9 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="js/ajax.js"></script>
 <script src="js/toggleNavbar.js"></script>
+<script src="https://www.paypal.com/sdk/js?client-id=sb"></script>
 <script>
+paypal.Buttons().render('#paypal-button-container');
 mostrarContacto();
 </script>
 
