Agregar input para cantidad

--- a/src/_navbar.html
+++ b/src/_navbar.html
@@ -112,6 +112,8 @@
     <div class="uk-modal-dialog uk-modal-body uk-border-rounded">
         <h1 class="uk-text-center">Realizar una donación</h1>
         <hr>
+        <label for="cantidad">Cantidad a pagar (MXN):</label>
+        <input class="uk-input uk-border-rounded uk-margin uk-margin-remove-top" type="number" id="cantidad" name="" value="" placeholder="" min="0">
         <div id="paypal-button-container"></div>
 
     </div>
